--- a/VeloTours/Views/Home/About.cshtml
+++ b/VeloTours/Views/Home/About.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<VeloTours.ViewModel.AthleteInfo>
+
+@{
     ViewBag.Title = "About";
 }
 
@@ -18,6 +20,16 @@
     <p>
         Use this area to provide additional information.
     </p>
+
+    <ul>
+    @foreach (var item in Model)
+    {
+        <li>
+            @String.Format("{0}", item.AthleteCount)
+        </li>
+    }
+    </ul>
+
     <ul>
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("About", "About", "Home")</li>
