--- a/VeloTours/Views/Profile/Index.cshtml
+++ b/VeloTours/Views/Profile/Index.cshtml
@@ -9,20 +9,20 @@
 <table>
     <tr>
         <td>Name:</td>
-        <td><%= model.Name(Model.Name) %></td>
+        <td>@Model.Name</td>
     </tr>
     <tr>
         <td>StravaID</td>
-        <td><%= model.Name(Model.AthleteID) %></td>
+        <td>@Model.AthleteID</td>
     </tr>
     <tr>
         <td>Privacy Mode</td>
-        <td><%= model.Name(Model.PrivacyMode) %></td>
+        <td>@Model.PrivacyMode</td>
     </tr>
     <tr>
         <td>Last updated</td>
-        <td><%= model.Name(Model.LastUpdated) %></td>
+        <td>@Model.LastUpdated</td>
     </tr>
 </table>
 
-@Html.ActionLink("Update name from Strava", "Update", new { id = ViewBag.StravaID })
+@Html.ActionLink("Update name from Strava", "Update", new { id = Model.AthleteID })
