--- a/VeloTours/Content/Site.css
+++ b/VeloTours/Content/Site.css
@@ -95,7 +95,9 @@ h5, h6 {
 ----------------------------------------------------------*/
 .content-wrapper {
     margin: 0 auto;
-    max-width: 960px;
+    /*max-width: 960px;*/
+        max-width: 1215px;
+
 }
 
 #body {
