--- a/VeloTours/Views/Segment/Segment.cshtml
+++ b/VeloTours/Views/Segment/Segment.cshtml
@@ -1,4 +1,5 @@
 ﻿@model VeloTours.Models.Segment
+@using VeloTours.Models;
 
 @{
     ViewBag.Title = "Segment";
@@ -9,4 +10,19 @@
 
 <h2>Strava Segments for @Model.Name</h2>
 
-<iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@Model.StravaID/embed" width="450"></iframe>
+<iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@Model.SegmentID/embed" width="450"></iframe>
+
+@*<p>
+    Go back to
+    @
+    {
+        int count = @Model.SegmentAreas.Count;
+        for(int i = 0; i < count; i++)
+        {
+            SegmentArea area = @Model.SegmentAreas[i];
+            Html.ActionLink("", "/", new { area = area.SegmentAreaID, athlete = ViewBag.Athlete] );
+            if(i + 1 < count)
+                <label>,</label>
+        }
+    }  
+</p>*@
