--- a/VeloTours/Views/Shared/_Layout.cshtml
+++ b/VeloTours/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
         <title>@ViewBag.Title - VeloTours</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <link href="~/Content/VeloTours.css"  rel="stylesheet" type="text/css" />
-        <meta name="viewport" content="width=device-width" />
+        <link href="~/Content/popover.css"  rel="stylesheet" type="text/css" />
+       <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
