--- a/VeloTours/Views/Shared/_Layout.cshtml
+++ b/VeloTours/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - VeloTracks</p>
+                    <p>&copy; @DateTime.Now.Year - VeloTours</p>
                 </div>
             </div>
         </footer>
