--- a/VeloTours/Views/Home/Index.cshtml
+++ b/VeloTours/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
-    ViewBag.Title = "VeloTours";
-}
+﻿@model VeloTours.Models.Athlete
+@using VeloTours.Helpers;
 
-<link href="~/Content/bootstrap.css" rel="stylesheet">
-<link href="~/Content/bootstrap-responsive.css" rel="stylesheet">
+@{
+    ViewBag.Title = "VeloTours";
+
+    int athleteID = (@Model != null) ? @Model.AthleteID : 0;
+}
 
 @section featured {
     <section class="featured">
@@ -30,7 +32,7 @@
     </li>
 
     <li class="two">
-        <h5>Get started</h5>
+        <h5>Select athlete</h5>
 
         If you're a Strava addict enter your Strava Id into the box below to get started or browse another user by entering his Strava ID
 
@@ -57,33 +59,39 @@
             </div>
         </div>
 
-        <% using (Html.BeginForm()) { %>        
         <input id="athleteID" type="text" />
         <button name="button" value="Change">Change user</button>
-        <% } %>
-
-        <p>
-            <b>To give you an idea what this site is about, here is a link to my data:</b>
-        </p>
-        <table id="segmentTable" class="table table-striped table-bordered table-condensed">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Segments</th>
-                    <th>KOM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>@Html.ActionLink("Henrik N.", "ShowOriginalAuthor", new { Athlete = 352657 });</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-            </tbody>
-        </table>
 
     </li>
-</ol>
 
-<script src="~/Scripts/jquery-1.8.1.min.js"></script>
-<script src="~/Scripts/bootstrap.js"></script>
+    <li class="three">
+        <h5>Get started</h5>
+
+        @if (@athleteID == 0)
+        {
+            <p>To give you an idea what this site is about, here is a link to my data:</p>
+        
+            <table id="athleteTable" class="table table-striped table-bordered table-condensed">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Segments</th>
+                        <th>KOM</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            @Html.ActionLink("Henrik N.", "", "Segment", routeValues: new { athlete = 352657 }, htmlAttributes: null )
+                            @Html.Raw(String.Format("<a id='athlete{0}' data-athleteid='{0}' class='athleteLink' href='#' rel='popover'><i class='icon-signal'></i></a>", 352657))
+                        </td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                </tbody>
+            </table>
+        }
+
+        Get an overview of all @Html.ActionLink("segments areas", "", "Segment", routeValues: new { athlete = athleteID }, htmlAttributes: null )
+    </li>
+</ol>
