--- a/VeloTours/Views/Segment/Index.cshtml
+++ b/VeloTours/Views/Segment/Index.cshtml
@@ -3,21 +3,33 @@
 
 @{
     ViewBag.Title = "Segment Area Overview";
+    int athleteID = ViewBag.Athlete ?? 0;
 }
 
 <h2>Segment Area Overview</h2>
 @foreach (Country country in Model)
 {
     <h3>@country.Name</h3>   
+    
+    <a href="@Url.Action("Update from Strava", "CountryUpdate", new { athlete = athleteID, country = country.CountryID, })">
+        <i class='icon-share'></i>
+    </a>
+    
     foreach (Region region in country.Regions)
     {
-        <h4>
-            @Html.ActionLink(region.Name, "/Region", new { region = region.RegionID, athlete = ViewBag.Athlete })
-        </h4>
+    <h4>
+        @Html.ActionLink(region.Name, "/Region", new { region = region.RegionID, athlete = athleteID })
+    </h4>
+
+    <a href="@Url.Action("Update from Strava", "RegionUpdate", new { athlete = athleteID, region = region.RegionID, })">
+        <i class='icon-share'></i>
+    </a>
+    
+    
         foreach (SegmentArea area in region.SegmentAreas)
         {
-            @Html.ActionLink(area.Name, "/Area", new { area = area.SegmentAreaID, athlete = ViewBag.Athlete })
-            @Html.DisplayText(", ");
+    @Html.ActionLink(area.Name, "/Area", new { area = area.SegmentAreaID, athlete = ViewBag.Athlete })
+    @Html.DisplayText(",&nbsp;");
         }
     }
 }
