Added 1st ViewModel

--- a/VeloTours/Views/Home/Index.cshtml
+++ b/VeloTours/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                     <tr>
                         <td>
                             @Html.ActionLink("Henrik N.", "", "Segment", routeValues: new { athlete = 352657 }, htmlAttributes: null )
-                            @Html.Raw(String.Format("<a id='athlete{0}' data-athleteid='{0}' class='athleteLink' href='#' rel='popover'><i class='icon-signal'></i></a>", 352657))
+                            @Html.Raw(String.Format("<a id='athlete{0}' data-athleteid='{0}' class='athleteLink' href='#' rel='popover'><i class='icon-user'></i></a>", 352657))
                         </td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
