--- a/VeloTours/Views/Segment/Area.cshtml
+++ b/VeloTours/Views/Segment/Area.cshtml
@@ -21,7 +21,7 @@
             <th class="right" title="Your placing's percentile position of the total number of riders.">pos %</th>
             <th style="vertical-align:top">Name</th>
             <th class="right" title="Distance, measured in kilometers">dist<br />km.</th>
-            <th class="right" title="Elevation difference">Elev<br />diff</th>
+            <th class="right" title="Elevation difference">elev<br />gain</th>
             <th class="right">grade<br />%</th>
             <th class="right" title="Grade category. This influence the Yersey calculations.">grade<br />cat</th>
             <th class="right" title="Total number of riders that have completed this segment">riders</th>
@@ -47,7 +47,7 @@
                 </td>
                 <td class="right">@String.Format("{0:#0.##}", @item.Distance / 1000)</td>
                 <td class="right">@Math.Round(item.ElevationGain ?? 0)</td>
-                <td class="right">@String.Format("{0:#0.##}", item.AvgGrade)</td>
+                <td class="right">@String.Format("{0:#0.#}", item.AvgGrade)</td>
                 <td class="right">@item.GradeType</td>
                 <td class="right">@item.NoRidden</td>
                 <td class="right">@item.NoRiders</td>
@@ -64,7 +64,7 @@
             <td>SUM</td>
             <td class="right">@String.Format("{0:#0.##}", @Model.Distance / 1000)</td>
             <td class="right">@Math.Round(@Model.ElevationGain ?? 0)</td>
-            <td class="right">@String.Format("{0:#0.##}", @Model.AvgGrade)</td>
+            <td class="right">@String.Format("{0:#0.#}", @Model.AvgGrade)</td>
             <td class="right">-</td>
             <td class="right">@Model.NoRiders</td>
             <td class="right">@Model.KomSpeed</td>
