--- a/VeloTours/Views/Segment/Segment.cshtml
+++ b/VeloTours/Views/Segment/Segment.cshtml
@@ -16,9 +16,8 @@
 <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@segmentID/embed" width="450"></iframe>
 
 <p>
-    @Html.ActionLink("Update from Strava", "SegmentUpdate", routeValues: new { segment = @segmentID, athlete = @athleteID, area = areaID }, htmlAttributes: null)<br />
-
-    @if (areaID > 0)
+    @Html.ActionLink("Update from Strava", "SegmentUpdate", routeValues: new { athlete = @athleteID, area = @areaID, segment = @segmentID, effort = false, }, htmlAttributes: null)<br />
+    @Html.ActionLink("Update all from Strava", "SegmentUpdate", routeValues: new { athlete = athleteID, area = @areaID, segment = @segmentID, effort = true, }, htmlAttributes: null)<br />
     {
         @Html.ActionLink("Go back to area", "area", new { area = areaID, athlete = athleteID })
     }
