--- a/VeloTours/Views/Segment/Area.cshtml
+++ b/VeloTours/Views/Segment/Area.cshtml
@@ -85,8 +85,8 @@
 }
 
 <p>
-    @Html.ActionLink("Update from Strava", "AreaUpdate", routeValues: new { athlete = athleteID, area = areaID, recursive = false, }, htmlAttributes: null)<br />
-    @Html.ActionLink("Update all from Strava", "AreaUpdate", routeValues: new { athlete = athleteID, area = areaID, recursive = true, }, htmlAttributes: null)<br />
+    @Html.ActionLink("Update from Strava", "AreaUpdate", routeValues: new { athlete = athleteID, area = areaID, effort = false, }, htmlAttributes: null)<br />
+    @Html.ActionLink("Update all from Strava", "AreaUpdate", routeValues: new { athlete = athleteID, area = areaID, effort = true, }, htmlAttributes: null)<br />
     @Html.ActionLink("Go back to overview", "/", new { athlete = athleteID })
 </p>
 
